# wall-cli

./: .gitignore  Cargo.toml  TODO.md
src/: cache.rs  filesystem.rs  main.rs  processing.rs  video.rs  wallpaper.rs  window.rs
