[package]
name = "wall-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.57"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
notify = "5.0.0-pre.15"
async-stream = "0.3.3"
dirs = "4.0.0"
image-transitions = "0.1.3"
image = "0.24.3"
rayon = "1.5.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-appender = "0.2.2"
gstreamer = "0.18.8"
gstreamer-app = { version = "0.18.7", features = ["v1_14"] }
gstreamer-player = "0.18.0"
gstreamer-video = "0.18.7"
x11rb = "0.10.1"
rand = "0.8.5"
